Fri Sep  4 04:46:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/httpservlet/abstract.rb (do_OPTIONS): method names
	  are symbols now.  [ruby-core:24580]

Sun Mar 15 09:17:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (.y.c): use SRC_FILE which contains slashes instead of
	  backslashes.  [ruby-core:22891]

Tue Sep  1 19:56:28 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (eval_string_with_cref): fix to check local_table_size.
	  [ruby-dev:39205] [Bug #2024]

Sun Aug 30 16:38:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_enc_symname2_p): not depend on nul terminator.

Sun Aug 30 01:15:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_read_all): use gzfile_newstr;
	  set and convert its encoding. [ruby-dev:38304]

Thu Aug 27 18:31:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_remove_method_id): exported.

	* numeric.c (num_sadded): fix for non-ascii method name.

Thu Aug 27 08:16:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/strscan/strscan.c (strscan_set_string): set string should not be
	  dupped or frozen, because freezing it causes #concat method failure,
	  and unnecessary to dup without freezing.  a patch from Aaron
	  Patterson at [ruby-core:25145].

Wed Aug 26 12:36:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (collect_local_variables_in_env): skips internal variables.
	  [ruby-core:25125]

Mon Aug 24 16:35:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (st_delete_safe): deals with packed entries.
	  [ruby-core:25080]

	* st.c (st_cleanup_safe): ditto.  [ruby-core:25081]

Sun Aug 23 00:56:13 2009  Tanaka Akira  <akr@fsij.org>

	* thread.c (rb_thread_schedule): don't recur infinitely.
	  (rb_threadptr_execute_interrupts): ditto.
	  [ruby-dev:38060]

Sat Aug 22 00:03:19 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (rb_check_deadlock): decrease number of sleepers before